640 too much code fix it

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,6 +89,7 @@ img {
   padding: 25px 30px 10px 30px;
  float: top;
 }
+
 #userName {
 	font-size: 20pt;
 	color: white;
@@ -243,4 +244,187 @@ color: white;
 	height: 100px;
     background-color: #ffffff;
     width: 100%;
+}
+    
+
+@media screen and (max-width: 980px){
+      name {
+          margin: 0 0 0 50;
+        }
+  
+links {
+        
+        right: 10px;
+        margin: 30 20 0 0;
+      }
+      
+      #userName {
+        margin: 0px;
+      }
+      .section1 {
+        width: 580px;
+        font-size: 18px;
+        margin: 10% 0 0 4.5%;
+        }
+        #hs{
+          float: left;
+          width:175px;
+          height:175px;
+        }
+  
+        .smallerPic{
+          
+          width:280px;
+          height:230px;
+          }
+  
+          .portfolioButtons {
+          position: absolute;
+          top: -100%;
+          left: 49.25%;
+          transform: translate(-50%, -50%);
+          -ms-transform: translate(-50%, -50%);
+          padding: 5;
+          width: 280;
+          
+          }
+          
+          #myTextArea{
+          width: 100%;
+          }
+          
+  
+  
+    }
+    
+    @media screen and (max-width: 768px){
+      name {
+        margin: 0 0 0 15;
+        }
+  
+      links {
+        
+        right: 5px;
+        margin: 30 0 0 0;
+      }
+      
+      .section1{
+        width: 690px;
+        font-size: 18px;
+        margin: 15% 0 10% 1%;
+        }
+        #hs{
+          float: left;
+          width:175px;
+          height:175px;
+        }
+
+        #aboutme {
+            padding: 25px 5px 10px 5px;
+        }
+        
+        #portfolio {
+          padding: 25px 5px 10px 5px;
+        }
+        
+        #contact {
+          float: right;
+          padding: 25px 5px 10px 5px;
+        }
+  
+        .smallerPic{
+          
+          width:320px;
+          height:270px;
+        }
+  
+        .portfolioButtons {
+          position: absolute;
+          top: -100%;
+          left: 49.5%;
+          transform: translate(-50%, -50%);
+          -ms-transform: translate(-50%, -50%);
+          padding: 5;
+          width: 320;
+          
+        }
+        
+        #myTextArea{
+          width: 100%;
+        }
+      
+      
+    
+    }
+    
+    @media screen and (max-width: 640px){
+      header {
+      position:static;
+      width: 100%;
+    }
+  
+      name {
+        margin: 0;
+        width: 590px;
+        left: 0;
+        top: 0;
+        text-align: center;	
+        
+        }
+  
+      links {
+      margin: 80 0 0 0;
+      text-align: center;
+      left: 0;
+      top: 0;
+      width: 580px;
+      padding: 30px;
+      background-color: #ffffff;
+      border-bottom: 3px solid #cccccc;
+      }
+      
+      .section1 {
+        width: 565px;
+        font-size: 18px;
+        margin: 25% 0 20% 1%;
+        }
+        #hs{
+          
+          width:560px;
+          height:560px;
+        }
+        #aboutme {
+          padding: 25px 5px 10px 5px;
+      }
+      
+      #portfolio {
+        padding: 25px 5px 10px 5px;
+      }
+      
+      #contact {
+        float: right;
+        padding: 25px 5px 10px 5px;
+      }
+
+        .smallerPic{
+          
+          width:560px;
+          height:510px;
+        }
+  
+        .portfolioButtons {
+          position: absolute;
+          top: -200%;
+          left: 49.5%;
+          transform: translate(-50%, -50%);
+          -ms-transform: translate(-50%, -50%);
+          padding: 20;
+          width: 560;
+          
+        }
+        
+        #myTextArea{
+          width: 100%;
+        }
+    
     
